--- a/Best_first_search.ipynb
+++ b/Best_first_search.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP39mU9pxkHAF2dyGrtlmyA",
+      "authorship_tag": "ABX9TyM65LXkyiAJ8H/6z51QIuQG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "l7CibtgBq3_e"
       },
       "outputs": [],
       "source": [
         "# count how many times the rules are broken\n",
+        "\n",
         "class sudoku:\n",
         "  def heuristic(sudoku):\n",
         "    rule_broken = 0\n",
@@ -78,7 +79,30 @@
         "      for a in square:\n",
         "        rule_broken += i.count(a) - 1\n",
         "\n",
-        "    return rule_broken"
+        "    return rule_broken\n",
+        "\n",
+        "  def remaining_num(row):\n",
+        "    num_fixed = []\n",
+        "    for i in row:\n",
+        "      if i > 10:\n",
+        "        num_fixed.append(i%10)\n",
+        "\n",
+        "    nums = [1,2,3,4,5,6,7,8,9]\n",
+        "    for i in nums:\n",
+        "      if i in num_fixed:\n",
+        "        nums.remove(i)\n",
+        "    return nums\n",
+        "\n",
+        "  def fill(sudoku):\n",
+        "    for i in sudoku:\n",
+        "      add_num = remaining_num(i)\n",
+        "      for j in add_num:\n",
+        "        for x in range(len(i)):\n",
+        "          if i[x] == 0:\n",
+        "            i[x] = j\n",
+        "            break\n",
+        "\n",
+        "    return sudoku"
       ]
     }
   ]
