--- a/Best_first_search.ipynb
+++ b/Best_first_search.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM65LXkyiAJ8H/6z51QIuQG",
+      "authorship_tag": "ABX9TyNjQyRaehRw/0Z5+i5Fypts",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,18 +46,26 @@
         "# count how many times the rules are broken\n",
         "\n",
         "class sudoku:\n",
+        "  #heuristic counts how many rules are broken\n",
+        "  # the sudoku board fixed numbers are doubled, eg. 11,22,33,44\n",
+        "  # this is to easily find which are fixed and which can be changed after filling the board\n",
         "  def heuristic(sudoku):\n",
         "    rule_broken = 0\n",
         "    for i in sudoku:\n",
-        "      row = set(i)\n",
+        "      # this is to not change sudoku when trying to get the fixed value\n",
+        "      rowl = [];\n",
+        "      for a in i:\n",
+        "        rowl.append(a%10)\n",
+        "      row = set(rowl)\n",
         "      for a in row:\n",
-        "        rule_broken += i.count(a) - 1\n",
+        "        rule_broken += rowl.count(a) - 1\n",
         "\n",
+        "    #get columns\n",
         "    sudoku_cols = []\n",
         "    for i in range(9):\n",
         "      col = []\n",
         "      for a in range(9):\n",
-        "        col.append(sudoku[a][i])\n",
+        "        col.append(sudoku[a][i]%10)\n",
         "      sudoku_cols.append(col)\n",
         "\n",
         "    for i in sudoku_cols:\n",
@@ -65,11 +73,12 @@
         "      for a in col:\n",
         "        rule_broken += i.count(a) - 1\n",
         "\n",
+        "    #get squares\n",
         "    sudoku_squares = []\n",
         "    squares = [[],[],[]]\n",
         "    for i in range(9):\n",
         "      for j in range(9):\n",
-        "        squares[j//3].append(sudoku[i][j])\n",
+        "        squares[j//3].append(sudoku[i][j]%10)\n",
         "      if i % 3 == 2:\n",
         "        sudoku_squares += squares\n",
         "        squares = [[],[],[]]\n",
@@ -81,8 +90,10 @@
         "\n",
         "    return rule_broken\n",
         "\n",
+        "  # get numbers that are not fixed (eg. fixed = 1,2; remaining_num = 3,4,5,6,7,8,9)\n",
         "  def remaining_num(row):\n",
         "    num_fixed = []\n",
+        "    #get fixed\n",
         "    for i in row:\n",
         "      if i > 10:\n",
         "        num_fixed.append(i%10)\n",
@@ -93,16 +104,22 @@
         "        nums.remove(i)\n",
         "    return nums\n",
         "\n",
+        "  #fill the board\n",
         "  def fill(sudoku):\n",
         "    for i in sudoku:\n",
         "      add_num = remaining_num(i)\n",
         "      for j in add_num:\n",
         "        for x in range(len(i)):\n",
+        "          #fill if empty\n",
         "          if i[x] == 0:\n",
         "            i[x] = j\n",
         "            break\n",
         "\n",
-        "    return sudoku"
+        "    return sudoku\n",
+        "\n",
+        "  def all_states(row):\n",
+        "    states = []\n",
+        "    num = remaining_num(row)"
       ]
     }
   ]
