--- a/Best_first_search.ipynb
+++ b/Best_first_search.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjQyRaehRw/0Z5+i5Fypts",
+      "authorship_tag": "ABX9TyNiNt7ZrpAvO7oPF4cGEOOv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,13 +43,17 @@
       },
       "outputs": [],
       "source": [
-        "# count how many times the rules are broken\n",
+        "import copy\n",
         "\n",
         "class sudoku:\n",
+        "  # define possible states\n",
+        "\n",
+        "  possible_nums = [1,2,3,4,5,6,7,8,9]\n",
+        "\n",
         "  #heuristic counts how many rules are broken\n",
         "  # the sudoku board fixed numbers are doubled, eg. 11,22,33,44\n",
         "  # this is to easily find which are fixed and which can be changed after filling the board\n",
-        "  def heuristic(sudoku):\n",
+        "  def heuristic(self,sudoku):\n",
         "    rule_broken = 0\n",
         "    for i in sudoku:\n",
         "      # this is to not change sudoku when trying to get the fixed value\n",
@@ -90,24 +94,15 @@
         "\n",
         "    return rule_broken\n",
         "\n",
-        "  # get numbers that are not fixed (eg. fixed = 1,2; remaining_num = 3,4,5,6,7,8,9)\n",
-        "  def remaining_num(row):\n",
-        "    num_fixed = []\n",
-        "    #get fixed\n",
-        "    for i in row:\n",
-        "      if i > 10:\n",
-        "        num_fixed.append(i%10)\n",
-        "\n",
-        "    nums = [1,2,3,4,5,6,7,8,9]\n",
-        "    for i in nums:\n",
-        "      if i in num_fixed:\n",
-        "        nums.remove(i)\n",
-        "    return nums\n",
-        "\n",
         "  #fill the board\n",
-        "  def fill(sudoku):\n",
+        "  def fill(self,sudoku):\n",
         "    for i in sudoku:\n",
-        "      add_num = remaining_num(i)\n",
+        "      for j in range(9):\n",
+        "        if i[j] != 0:\n",
+        "          i[j] * 11\n",
+        "\n",
+        "    for i in sudoku:\n",
+        "      add_num = self.remaining_num(i)\n",
         "      for j in add_num:\n",
         "        for x in range(len(i)):\n",
         "          #fill if empty\n",
@@ -117,9 +112,42 @@
         "\n",
         "    return sudoku\n",
         "\n",
-        "  def all_states(row):\n",
-        "    states = []\n",
-        "    num = remaining_num(row)"
+        "  def searching(self, sudoku, x, y):\n",
+        "    if sudoku[y][x] > 10:\n",
+        "      return sudoku\n",
+        "\n",
+        "    new_sudoku = copy.deepcopy(sudoku)\n",
+        "    low_rule_broken = (99,[[]]);\n",
+        "\n",
+        "    for a in self.possible_nums:\n",
+        "      new_sudoku[y][x] = a\n",
+        "      rule_broken = heuristic(new_sudoku)\n",
+        "      if rule_broken < low_rule_broken[0]:\n",
+        "        low_rule_broken = (rule_broken,copy.deepcopy(new_sudoku))\n",
+        "\n",
+        "    return low_rule_broken\n",
+        "\n",
+        "  def __init__(self, sudoku):\n",
+        "    if heuristic(sudoku) != 0:\n",
+        "      print(\"A rule is already broken\")\n",
+        "      return\n",
+        "\n",
+        "    sudoku = fill(sudoku)\n",
+        "\n",
+        "    x = 0\n",
+        "    y = 0\n",
+        "    current_rule_broken = (99,sudoku)\n",
+        "\n",
+        "    while current_rule_broken[0] != 0 :\n",
+        "      current_rule_broken = searching(current_rule_broken[0], x, y)\n",
+        "      y += 1\n",
+        "      if y == 9:\n",
+        "        x += 1\n",
+        "        y = 0\n",
+        "        if x == 9:\n",
+        "          x = 0\n",
+        "\n",
+        "    print(current_rule_broken[0])"
       ]
     }
   ]
