goddamn i wrote the wrong thing just now

--- a/Best_first_search.ipynb
+++ b/Best_first_search.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNiNt7ZrpAvO7oPF4cGEOOv",
+      "authorship_tag": "ABX9TyOl4kOcP0RT9VlTtkwMrS+3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,10 +44,13 @@
       "outputs": [],
       "source": [
         "import copy\n",
+        "import heapq\n",
         "\n",
         "class sudoku:\n",
         "  # define possible states\n",
         "\n",
+        "  frontier = []\n",
+        "  explored_set = []\n",
         "  possible_nums = [1,2,3,4,5,6,7,8,9]\n",
         "\n",
         "  #heuristic counts how many rules are broken\n",
@@ -94,12 +97,26 @@
         "\n",
         "    return rule_broken\n",
         "\n",
+        "  # get numbers that are not fixed (eg. fixed = 1,2; remaining_num = 3,4,5,6,7,8,9)\n",
+        "  def remaining_num(self,row):\n",
+        "    num_fixed = []\n",
+        "    #get fixed\n",
+        "    for i in row:\n",
+        "      if i > 10:\n",
+        "        num_fixed.append(i%10)\n",
+        "\n",
+        "    nums = [1,2,3,4,5,6,7,8,9]\n",
+        "    for i in nums:\n",
+        "      if i in num_fixed:\n",
+        "        nums.remove(i)\n",
+        "    return nums\n",
+        "\n",
         "  #fill the board\n",
         "  def fill(self,sudoku):\n",
         "    for i in sudoku:\n",
         "      for j in range(9):\n",
         "        if i[j] != 0:\n",
-        "          i[j] * 11\n",
+        "          i[j] = i[j] * 11\n",
         "\n",
         "    for i in sudoku:\n",
         "      add_num = self.remaining_num(i)\n",
@@ -121,33 +138,32 @@
         "\n",
         "    for a in self.possible_nums:\n",
         "      new_sudoku[y][x] = a\n",
-        "      rule_broken = heuristic(new_sudoku)\n",
-        "      if rule_broken < low_rule_broken[0]:\n",
-        "        low_rule_broken = (rule_broken,copy.deepcopy(new_sudoku))\n",
-        "\n",
+        "      if a in self.explored_set:\n",
+        "        continue\n",
+        "      rule_broken = self.heuristic(new_sudoku)\n",
+        "      if (rule_broken,a) in self.frontier:\n",
+        "        continue\n",
+        "      heapq.heappush(self.frontier, (rule_broken, copy.deepcopy(new_sudoku)))\n",
         "    return low_rule_broken\n",
         "\n",
         "  def __init__(self, sudoku):\n",
-        "    if heuristic(sudoku) != 0:\n",
+        "    if self.heuristic(sudoku) != 0:\n",
         "      print(\"A rule is already broken\")\n",
         "      return\n",
         "\n",
-        "    sudoku = fill(sudoku)\n",
+        "    sudoku = self.fill(sudoku)\n",
         "\n",
         "    x = 0\n",
         "    y = 0\n",
-        "    current_rule_broken = (99,sudoku)\n",
         "\n",
-        "    while current_rule_broken[0] != 0 :\n",
-        "      current_rule_broken = searching(current_rule_broken[0], x, y)\n",
-        "      y += 1\n",
-        "      if y == 9:\n",
-        "        x += 1\n",
-        "        y = 0\n",
-        "        if x == 9:\n",
-        "          x = 0\n",
-        "\n",
-        "    print(current_rule_broken[0])"
+        "    current_rule_broken = self.heuristic(sudoku)\n",
+        "    while current_rule_broken != 0:\n",
+        "      self.searching(sudoku,x,y)\n",
+        "      if self.frontier[0][0] < current_rule_broken:\n",
+        "        a = heapq.heappop(self.frontier)\n",
+        "        sudoku = a[1]\n",
+        "        self.explored_set.append(copy.deepcopy(a[1]))\n",
+        "        current_rule_broken = a[0]"
       ]
     }
   ]
