--- a/Best_first_search.ipynb
+++ b/Best_first_search.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOl4kOcP0RT9VlTtkwMrS+3",
+      "authorship_tag": "ABX9TyPzeEGHfM4LecW7zX2/h+rP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,8 @@
         "        rowl.append(a%10)\n",
         "      row = set(rowl)\n",
         "      for a in row:\n",
-        "        rule_broken += rowl.count(a) - 1\n",
+        "        if a != 0:\n",
+        "          rule_broken += rowl.count(a) - 1\n",
         "\n",
         "    #get columns\n",
         "    sudoku_cols = []\n",
@@ -78,7 +79,8 @@
         "    for i in sudoku_cols:\n",
         "      col = set(i)\n",
         "      for a in col:\n",
-        "        rule_broken += i.count(a) - 1\n",
+        "        if a != 0:\n",
+        "          rule_broken += i.count(a) - 1\n",
         "\n",
         "    #get squares\n",
         "    sudoku_squares = []\n",
@@ -93,7 +95,8 @@
         "    for i in sudoku_squares:\n",
         "      square = set(i)\n",
         "      for a in square:\n",
-        "        rule_broken += i.count(a) - 1\n",
+        "        if a != 0:\n",
+        "          rule_broken += i.count(a) - 1\n",
         "\n",
         "    return rule_broken\n",
         "\n",
@@ -106,9 +109,7 @@
         "        num_fixed.append(i%10)\n",
         "\n",
         "    nums = [1,2,3,4,5,6,7,8,9]\n",
-        "    for i in nums:\n",
-        "      if i in num_fixed:\n",
-        "        nums.remove(i)\n",
+        "    nums = [n for n in range(1, 10) if n not in num_fixed]\n",
         "    return nums\n",
         "\n",
         "  #fill the board\n",
@@ -131,20 +132,18 @@
         "\n",
         "  def searching(self, sudoku, x, y):\n",
         "    if sudoku[y][x] > 10:\n",
-        "      return sudoku\n",
+        "      return\n",
         "\n",
         "    new_sudoku = copy.deepcopy(sudoku)\n",
-        "    low_rule_broken = (99,[[]]);\n",
         "\n",
         "    for a in self.possible_nums:\n",
         "      new_sudoku[y][x] = a\n",
-        "      if a in self.explored_set:\n",
+        "      if new_sudoku in self.explored_set:\n",
         "        continue\n",
         "      rule_broken = self.heuristic(new_sudoku)\n",
-        "      if (rule_broken,a) in self.frontier:\n",
+        "      if (rule_broken,new_sudoku) in self.frontier:\n",
         "        continue\n",
         "      heapq.heappush(self.frontier, (rule_broken, copy.deepcopy(new_sudoku)))\n",
-        "    return low_rule_broken\n",
         "\n",
         "  def __init__(self, sudoku):\n",
         "    if self.heuristic(sudoku) != 0:\n",
@@ -159,11 +158,16 @@
         "    current_rule_broken = self.heuristic(sudoku)\n",
         "    while current_rule_broken != 0:\n",
         "      self.searching(sudoku,x,y)\n",
-        "      if self.frontier[0][0] < current_rule_broken:\n",
-        "        a = heapq.heappop(self.frontier)\n",
-        "        sudoku = a[1]\n",
-        "        self.explored_set.append(copy.deepcopy(a[1]))\n",
-        "        current_rule_broken = a[0]"
+        "      a = heapq.heappop(self.frontier)\n",
+        "      sudoku = a[1]\n",
+        "      self.explored_set.append(copy.deepcopy(a[1]))\n",
+        "      current_rule_broken = a[0]\n",
+        "      y += 1\n",
+        "      if y == 9:\n",
+        "        y = 0\n",
+        "        x += 1\n",
+        "        if x == 9:\n",
+        "          x = 0"
       ]
     }
   ]
