--- a/Depth_first_search_v4(final).ipynb
+++ b/Depth_first_search_v4(final).ipynb
@@ -15,6 +15,7 @@
       "source": [
         "import copy\n",
         "\n",
+        "# how many times it ran (for debug)\n",
         "it = -1\n",
         "\n",
         "def search_line(line):\n",
@@ -27,6 +28,7 @@
         "\n",
         "def print_sudoku(sudoku):\n",
         "  #format and print\n",
+        "  #if sudoku check if there is any output\n",
         "  if sudoku:\n",
         "    count_row = 0\n",
         "    count_col = 0\n",
@@ -44,7 +46,10 @@
         "      count_col = 0\n",
         "      count_row += 1\n",
         "      print()\n",
+        "  else:\n",
+        "    print(\"no possible solutions\")\n",
         "\n",
+        "#to get the row, column and box of a position\n",
         "def get_data(sudoku,x,y):\n",
         "  row = sudoku[y]\n",
         "  col = [i[x] for i in sudoku]\n",
@@ -57,14 +62,21 @@
         "      box.append(sudoku[box_y+j][box_x+i])\n",
         "  return (row,col,box)\n",
         "\n",
+        "#get valid numbers (common numbers between box, row and column)\n",
         "def get_common(data):\n",
         "  num = [1,2,3,4,5,6,7,8,9]\n",
         "  return [n for n in num if n not in data[0] and n not in data[1] and n not in data[2]]\n",
         "\n",
+        "#the search algorithm (depth first search)\n",
         "def searching(sudoku, x = 0, y = -1, iteration = -1):\n",
+        "  #get the global it\n",
         "  global it\n",
         "  it += 1\n",
+        "\n",
+        "  #iteration for debugging\n",
         "  iteration += 1\n",
+        "\n",
+        "  #increase position (if after the final coordinate then return)\n",
         "  y += 1\n",
         "  if y == 9:\n",
         "    x += 1\n",
@@ -72,22 +84,32 @@
         "    if x == 9:\n",
         "      return sudoku\n",
         "\n",
+        "  # check if empty\n",
         "  if sudoku[y][x] == 0:\n",
+        "\n",
+        "    # debug purposes\n",
         "    print_sudoku(sudoku)\n",
         "    print(\"iteration: \", iteration)\n",
         "    print(\"it = \", it)\n",
         "    print()\n",
+        "\n",
+        "    #get valid numbers\n",
         "    valid_num = get_common(get_data(sudoku,x,y))\n",
         "\n",
+        "    #for each valid num continue search\n",
         "    for num in valid_num:\n",
         "      new_sudoku = copy.deepcopy(sudoku)\n",
         "      new_sudoku[y][x] = num\n",
         "      a = searching(new_sudoku,x,y,iteration)\n",
+        "\n",
+        "      #if found return the board\n",
         "      if a:\n",
         "        return a\n",
+        "\n",
+        "  #if alreaddy filled (originally filled)\n",
         "  else:\n",
-        "    new_sudoku = copy.deepcopy(sudoku)\n",
-        "    a = searching(new_sudoku,x,y,iteration)\n",
+        "    #just go to next position\n",
+        "    a = searching(sudoku,x,y,iteration)\n",
         "    if a:\n",
         "      return a\n",
         "  return None\n",
@@ -97,13 +119,13 @@
         "    for row in sudoku:\n",
         "        nums = [n for n in row if n != 0]\n",
         "        if len(nums) != len(set(nums)):\n",
-        "            return False  # Duplicate found in a row\n",
+        "            return False\n",
         "\n",
         "    # Check columns\n",
         "    for col in range(9):\n",
         "        nums = [sudoku[row][col] for row in range(9) if sudoku[row][col] != 0]\n",
         "        if len(nums) != len(set(nums)):\n",
-        "            return False  # Duplicate found in a column\n",
+        "            return False\n",
         "\n",
         "    # Check 3x3 boxes\n",
         "    for box_row in range(0, 9, 3):\n",
@@ -115,11 +137,13 @@
         "                    if val != 0:\n",
         "                        nums.append(val)\n",
         "            if len(nums) != len(set(nums)):\n",
-        "                return False  # Duplicate found in a 3x3 box\n",
+        "                return False\n",
         "\n",
-        "    return True  # No violations\n",
+        "    return True\n",
+        "\n",
         "\n",
         "def sudoku_solver(sudoku):\n",
+        "  #if board valid only proceed\n",
         "  if not is_valid_board(sudoku):\n",
         "    return\n",
         "\n",
@@ -145,9 +169,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0092d71d-7c50-47b4-a934-d9a1d8f03336"
+        "outputId": "19449e3d-772d-466f-eef4-40709b49ebfd"
       },
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
