--- a/Depth_first_search_v4(final).ipynb
+++ b/Depth_first_search_v4(final).ipynb
@@ -98,13 +98,13 @@
         "\n",
         "    #for each valid num continue search\n",
         "    for num in valid_num:\n",
-        "      new_sudoku = copy.deepcopy(sudoku)\n",
-        "      new_sudoku[y][x] = num\n",
-        "      a = searching(new_sudoku,x,y,iteration)\n",
+        "      sudoku[y][x] = num\n",
+        "      a = searching(sudoku,x,y,iteration)\n",
         "\n",
         "      #if found return the board\n",
         "      if a:\n",
         "        return a\n",
+        "      sudoku[y][x] = 0\n",
         "\n",
         "  #if alreaddy filled (originally filled)\n",
         "  else:\n",
@@ -169,9 +169,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "19449e3d-772d-466f-eef4-40709b49ebfd"
+        "outputId": "242d804d-d1c1-4894-8b40-9e6f8af70928"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
