--- a/Depth_first_search_v5(true_final).ipynb
+++ b/Depth_first_search_v5(true_final).ipynb
@@ -93,7 +93,7 @@
         "    # debug purposes\n",
         "    print_sudoku(sudoku)\n",
         "    print(\"iteration: \", iteration)\n",
-        "    print(\"it = \", it)\n",
+        "    print(\"depth = \", it)\n",
         "    print()\n",
         "\n",
         "    #get valid numbers\n",
@@ -185,7 +185,7 @@
         },
         "outputId": "3b4f0749-2a5d-47ce-f70d-0a503cd14bc6"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
